# olio-ohjelmointi

./: CMakeLists.txt  person.cpp  person.h
H3a/: CMakeLists.txt  main.cpp
H3b/: CMakeLists.txt  main.cpp
